--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "aws-amplify": "^6.6.6",
     "next": "14.2.10",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "glob": "^9.0.0",
+    "rimraf": "^4.0.0"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.5.1",
     "@aws-amplify/backend-cli": "^1.3.0",
+    "@babel/plugin-transform-class-properties": "^7.22.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
