--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@aws-amplify/ui-react": "^6.5.5",
     "@aws-amplify/ui-react-storage": "^3.8.0",
     "aws-amplify": "^6.6.6",
+    "glob": "^9.0.0",
+    "json-schema-to-ts": "^3.1.1",
     "next": "14.2.10",
     "react": "^18",
     "react-dom": "^18",
-    "glob": "^9.0.0",
-    "rimraf": "^4.0.0"
+    "rimraf": "^4.0.0",
+    "ts-algebra": "^2.0.0"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.5.1",
@@ -31,5 +33,9 @@
     "esbuild": "^0.23.1",
     "tsx": "^4.19.0",
     "typescript": "^5.6.2"
+  },
+  "engines": {
+    "node": ">=18.19.0",
+    "npm": ">=9.8.1"
   }
 }
