--- a/amplify.yml
+++ b/amplify.yml
@@ -3,6 +3,10 @@ backend:
   phases:
     build:
       commands:
+        - nvm install 18.19.0
+        - nvm use 18.19.0
+        - node -v
+        - npm install
         - npm ci --cache .npm --prefer-offline
         - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
 frontend:
